transformed files now to remove globals. Step before switching to pointerless design using only indices into arrays. Compiles fine under VS2010 and results still ok.

--- a/src/fpgaPlayground/HLS/AFAalpha/AFAvs2010/AFAvs2010.vcxproj
+++ b/src/fpgaPlayground/HLS/AFAalpha/AFAvs2010/AFAvs2010.vcxproj
@@ -145,21 +145,21 @@
     <ClCompile Include="..\src\main.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\src\include\AFADefines.h" />
-    <ClInclude Include="..\src\include\AFANetworkSettings.h" />
-    <ClInclude Include="..\src\include\AFANetworkSettingsCommon.h" />
-    <ClInclude Include="..\src\include\AFANetworkSettingsHW.h" />
-    <ClInclude Include="..\src\include\AFAProcessFunction.h" />
-    <ClInclude Include="..\src\include\AFAProcessing.h" />
-    <ClInclude Include="..\src\include\AFAProcessingCommon.h" />
-    <ClInclude Include="..\src\include\AFAProcessingHW.h" />
-    <ClInclude Include="..\src\include\AFARandom.h" />
-    <ClInclude Include="..\src\include\AFARandomCommon.h" />
-    <ClInclude Include="..\src\include\AFARandomHW.h" />
-    <ClInclude Include="..\src\include\AFASpectra.h" />
-    <ClInclude Include="..\src\include\AFASpectraCommon.h" />
-    <ClInclude Include="..\src\include\AFASpectraHW.h" />
-    <ClInclude Include="..\src\include\AFATypes.h" />
+    <ClInclude Include="..\src\AFADefines.h" />
+    <ClInclude Include="..\src\AFANetworkSettings.h" />
+    <ClInclude Include="..\src\AFANetworkSettingsCommon.h" />
+    <ClInclude Include="..\src\AFANetworkSettingsHW.h" />
+    <ClInclude Include="..\src\AFAProcessFunction.h" />
+    <ClInclude Include="..\src\AFAProcessing.h" />
+    <ClInclude Include="..\src\AFAProcessingCommon.h" />
+    <ClInclude Include="..\src\AFAProcessingHW.h" />
+    <ClInclude Include="..\src\AFARandom.h" />
+    <ClInclude Include="..\src\AFARandomCommon.h" />
+    <ClInclude Include="..\src\AFARandomHW.h" />
+    <ClInclude Include="..\src\AFASpectra.h" />
+    <ClInclude Include="..\src\AFASpectraCommon.h" />
+    <ClInclude Include="..\src\AFASpectraHW.h" />
+    <ClInclude Include="..\src\AFATypes.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
