--- a/src/fpgaPlayground/HLS/AFAalpha/.cproject
+++ b/src/fpgaPlayground/HLS/AFAalpha/.cproject
@@ -81,7 +81,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="AFAProcessing_64Bit_250MHz|source/AFATypes.h|source/AFADefines.h|*.c*|*.C*" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="AFAProcessing_64Bit_250MHz|AFAProcessing_64Bit_400MHz|source/AFATypes.h|source/AFADefines.h|*.c*|*.C*" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -160,7 +160,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="AFAProcessing_64Bit_250MHz|source/AFATypes.h|source/AFADefines.h|*.c*|*.C*" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="AFAProcessing_64Bit_250MHz|AFAProcessing_64Bit_400MHz|source/AFATypes.h|source/AFADefines.h|*.c*|*.C*" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
