--- a/src/fpgaPlayground/HLS/AFAalpha/AFAvs2010/AFAvs2010.vcxproj
+++ b/src/fpgaPlayground/HLS/AFAalpha/AFAvs2010/AFAvs2010.vcxproj
@@ -81,6 +81,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
