Philipps test file with 100 spectra added as C-Source and embedded into main processing

--- a/src/fpgaPlayground/vs2010/AFAvs2010.vcxproj.filters
+++ b/src/fpgaPlayground/vs2010/AFAvs2010.vcxproj.filters
@@ -91,6 +91,9 @@
     <ClCompile Include="..\src\BoardIO.c">
       <Filter>BoardFiles</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\AFATestDataSpectraShort.c">
+      <Filter>SrcTestData</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\AFADefines.h">
