Added golden sample index list of step 0000

--- a/src/fpgaPlayground/vs2010/AFAvs2010.vcxproj
+++ b/src/fpgaPlayground/vs2010/AFAvs2010.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="..\src\AFATestDataSpectra12.c" />
     <ClCompile Include="..\src\AFATestDataSpectra13.c" />
     <ClCompile Include="..\src\AFATestDataSpectraShort.c" />
+    <ClCompile Include="..\src\AFATestDataSpectraShortIndex0000.c" />
     <ClCompile Include="..\src\AFATypes.c" />
     <ClCompile Include="..\src\BoardIO.c" />
     <ClCompile Include="..\src\main.c" />
