--- a/src/fpgaPlayground/vs2010/AFAvs2010.vcxproj.filters
+++ b/src/fpgaPlayground/vs2010/AFAvs2010.vcxproj.filters
@@ -94,6 +94,9 @@
     <ClCompile Include="..\src\AFATestDataSpectraShort.c">
       <Filter>SrcTestData</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\AFATestDataSpectraShortIndex0000.c">
+      <Filter>SrcTestData</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\AFADefines.h">
