Added files and make a runnable VC2010 solution which tests successfully after 200 iterations the results from Philipps sample. HLS comes after that.

--- a/src/fpgaPlayground/vs2010/AFAvs2010.vcxproj.filters
+++ b/src/fpgaPlayground/vs2010/AFAvs2010.vcxproj.filters
@@ -97,6 +97,9 @@
     <ClCompile Include="..\src\AFATestDataSpectraShortIndex0000.c">
       <Filter>SrcTestData</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\AFATestDataSpectraShortIndex0200.c">
+      <Filter>SrcTestData</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\AFADefines.h">
