--- a/src/fpgaPlayground/vs2010/AFAvs2010.vcxproj
+++ b/src/fpgaPlayground/vs2010/AFAvs2010.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="..\src\AFATestDataSpectra13.c" />
     <ClCompile Include="..\src\AFATestDataSpectraShort.c" />
     <ClCompile Include="..\src\AFATestDataSpectraShortIndex0000.c" />
+    <ClCompile Include="..\src\AFATestDataSpectraShortIndex0200.c" />
     <ClCompile Include="..\src\AFATypes.c" />
     <ClCompile Include="..\src\BoardIO.c" />
     <ClCompile Include="..\src\main.c" />
